codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_fast_mode.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Implement this plan?

› 1. Yes, implement this plan  Switch to Default and start coding in Fast
                               mode.
  2. No, stay in Plan mode     Continue planning with the model.

  Press enter to confirm or esc to go back
