codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_default_footer_fast_mode.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.4 default · ~/projects/codex/codex-rs/tui · fast mode                   "
